@@ -1,3 +1,9 @@
+2019-12-05  Jonathan Wakely  <jwakely@redhat.com>
+
+	* testsuite/23_containers/span/lwg3255.cc: Fix test. Constructing a
+	span of non-const elements should not be possible from a const array
+	or an array of const elements.
+
 2019-12-05  JeanHeyd "ThePhD" Meneide  <phdofthehouse@gmail.com>
 
 	Implement P1872R0 and P1394R0 for std::span
